# mtparser

./: Cargo.toml  README.md  publish.sh
mtparser-core/: Cargo.toml
mtparser-core/src/: error.rs  version.rs
mtparser-core/src/ast/: commands.rs  expr.rs  span.rs  statement.rs  text.rs
mtparser-core/src/parser/: arg.rs  command.rs  flow.rs  mod.rs
mtparser-core/src/visitor/: mod.rs
mtparser-core/tests/: unit_tests.rs
mtparser-core/tests/fixtures/: basic_commands.test  flow_control.test  replace.test  write_file.test
mtparser-wasm/: Cargo.toml
mtparser-wasm/src/: lib.rs
src/: error.rs  lib.rs  main.rs  version.rs
src/ast/: commands.rs  expr.rs  mod.rs  mtfile.rs  span.rs  statement.rs  test_file.rs  text.rs
src/parser/: arg.rs  command.rs  flow.rs  mod.rs
src/visitor/: mod.rs  mut_visitor.rs
tests/: recursive_test.rs  unit_tests.rs
tests/fixtures/: connection.test  delimiter.test  sql_statements.test
