[package]
name = "mtparser-wasm"
version = "0.2.2"
edition = "2024"
description = "WASM bindings for mtparser — MySQL mysqltest and MariaDB mariadb-test file parser"
license = "Apache-2.0"
repository = "https://github.com/shapled/mtparser"

[lib]
crate-type = ["cdylib"]

[dependencies]
mtparser = { path = "../mtparser-core", features = ["serde"] }
wasm-bindgen = "0.2"
serde = "1"
serde-wasm-bindgen = "0.6"
